mise a jour des yml pour l'oreal

--- a/shared/latex/en/nlp/help-pointers.tex
+++ b/shared/latex/en/nlp/help-pointers.tex
@@ -1,5 +1,5 @@
 
-\begin{frame}{Ressources complémentaires}
+\begin{frame}{Help pointers}
     \begin{itemize}
         \item \bluelink{https://youtu.be/AcqlkoI3VEo}{Word embeddings}
         \item \bluelink{https://huggingface.co/}{Platform sharing modern language models}
