--- a/shared/latex/en/supervised/trees-details.tex
+++ b/shared/latex/en/supervised/trees-details.tex
@@ -217,7 +217,7 @@
 \end{frame}
 
 \begin{frame}{Limit overfiting}
-  overfiting can be managed using specific:
+  Overfiting can be managed using specific:
   \begin{itemize}
     \item Maximum depth
     \item Minimum number of instances in each leaf
