--- a/shared/latex/en/unsupervised/anomaly-detection/help-pointers.tex
+++ b/shared/latex/en/unsupervised/anomaly-detection/help-pointers.tex
@@ -1,4 +1,4 @@
-\begin{frame}{Ressources complémentaires}
+\begin{frame}{Help pointers}
     \begin{itemize}
         \item \bluelink{https://blog.ysance.com/algorithme-n3-comprendre-lisolation-forest-en-5-min}{Isolation forest}
         \item \bluelink{https://www.kaggle.com/robinteuwens/anomaly-detection-with-auto-encoders}{With neural networks}
