--- a/shared/latex/en/unsupervised/clustering/metrics.tex
+++ b/shared/latex/en/unsupervised/clustering/metrics.tex
@@ -64,7 +64,7 @@
 
 \begin{frame}{Clustering metrics --- Many other metrics}
   \begin{itemize}
-  \item Calinski-Harabaz index: Density comparison inter vs intra cluster (no bound, the higher the better)
+  \item Calinski-Harabaz index: Density comparison inter vs intra cluster (not bounded, the higher the better)
   \item Davies-Bouldin Index: cluster similarity measurement (the lower the better)
   \item ...
   \end{itemize}
