--- a/shared/latex/en/unsupervised/dimensionality-reduction/tsne-umap.tex
+++ b/shared/latex/en/unsupervised/dimensionality-reduction/tsne-umap.tex
@@ -1,13 +1,13 @@
-\begin{frame}{Projections non linéaires}
+\begin{frame}{Non-Linear Projections}
   More efficient to discover patterns in high dimension:
 
   \begin{itemize}
     \item t-SNE
     \item UMAP
   \end{itemize}
+  But they lose all linear interpretations.
 \end{frame}
 
-But they lose all linear interpretations.
 
 \begin{frame}{Method}
   Graph layout algorithms.
