--- a/shared/latex/en/unsupervised/introduction.tex
+++ b/shared/latex/en/unsupervised/introduction.tex
@@ -1,4 +1,4 @@
-\begin{frame}{But}
+\begin{frame}{Goals}
   Detection of hidden variables, hidden "\textit{structures}" (clusters, topological variety (manifold), ...)
 
   \begin{minipage}[l]{0.69\linewidth}
@@ -14,7 +14,7 @@
 \end{frame}
 
 \begin{frame}{Clustering}
-  Par exemple~: Création de segments de clientèle
+  For instance: Identifying customers segments
   \V{["img/clustering-clients-2", "tw", 0.5] | image}
 \end{frame}
 
