--- a/shared/latex/en/python/data-science/tp-pandas.tex
+++ b/shared/latex/en/python/data-science/tp-pandas.tex
@@ -1,5 +1,5 @@
-\begin{frame}{Practical exercises}
-  \bluelink{https://colab.research.google.com/drive/1GQWNAGEQJk7q_zPFgeaCR-5-RfSh1HOb\#forceEdit=true&sandboxMode=true}{TP Pandas sur les données titanic}
+\begin{frame}{Exercises}
+  \bluelink{https://colab.research.google.com/drive/1GQWNAGEQJk7q_zPFgeaCR-5-RfSh1HOb\#forceEdit=true&sandboxMode=true}{Using pandas on the titanic dataset}
   
-  \bluelink{https://colab.research.google.com/drive/1Jyt0sQMqiEZLmFdFcRWG1skdg5HNrYIB\#forceEdit=true&sandboxMode=true}{TP Pandas Time Series}
+  \bluelink{https://colab.research.google.com/drive/1Jyt0sQMqiEZLmFdFcRWG1skdg5HNrYIB\#forceEdit=true&sandboxMode=true}{Pandas Time Series}
 \end{frame}
