Traduction img et yml de la section ml

--- a/shared/latex/en/python/data-science/matplotlib.tex
+++ b/shared/latex/en/python/data-science/matplotlib.tex
@@ -11,7 +11,7 @@
     \end{minipage}
     \begin{minipage}[t]{0.49\linewidth}
         \vfill
-        \V{["plt/mpl/simple", "tw", 1] | image}  
+        \V{["plt/mpl/simple", "tw", 1, "en"] | image}  
     \end{minipage}
 \end{frame}
 
@@ -21,7 +21,7 @@
     \end{minipage}
     \begin{minipage}[t]{0.49\linewidth}
         \vfill
-        \V{["plt/mpl/scatter", "tw", 1] | image} 
+        \V{["plt/mpl/scatter", "tw", 1, "en"] | image} 
     \end{minipage}
 \end{frame}
 
@@ -31,7 +31,7 @@
     \end{minipage}
     \begin{minipage}[t]{0.49\linewidth}
         \vfill
-        \V{["plt/mpl/fill-between", "tw", 1] | image} 
+        \V{["plt/mpl/fill-between", "tw", 1, "en"] | image} 
     \end{minipage}
 \end{frame}
 
@@ -41,7 +41,7 @@
     \end{minipage}
     \begin{minipage}[t]{0.49\linewidth}
         \vfill
-        \V{["plt/mpl/bar", "tw", 1] | image} 
+        \V{["plt/mpl/bar", "tw", 1, "en"] | image} 
     \end{minipage}
 \end{frame}
 
@@ -51,7 +51,7 @@
     \end{minipage}
     \begin{minipage}[t]{0.49\linewidth}
         \vfill
-        \V{["plt/mpl/imshow", "tw", 1] | image} 
+        \V{["plt/mpl/imshow", "tw", 1,"en"] | image} 
     \end{minipage}
 \end{frame}
 
@@ -61,7 +61,7 @@
     \end{minipage}
     \begin{minipage}[t]{0.49\linewidth}
         \vfill
-        \V{["plt/mpl/contour", "tw", 1] | image} 
+        \V{["plt/mpl/contour", "tw", 1, "en"] | image} 
     \end{minipage}
 \end{frame}
 
@@ -71,7 +71,7 @@
     \end{minipage}
     \begin{minipage}[t]{0.49\linewidth}
         \vfill
-        \V{["plt/mpl/hist", "tw", 1] | image} 
+        \V{["plt/mpl/hist", "tw", 1, "en"] | image} 
     \end{minipage}
 \end{frame}
 
@@ -81,7 +81,7 @@
     \end{minipage}
     \begin{minipage}[t]{0.49\linewidth} 
         \vfill
-        \V{["plt/mpl/boxplot", "tw", 1] | image}
+        \V{["plt/mpl/boxplot", "tw", 1, "en"] | image}
     \end{minipage}
 \end{frame}
 
@@ -101,7 +101,7 @@
 \end{frame}
 
 \begin{frame}{Anatomy of a figure}
-    \V{["plt/mpl/anatomy", "th", 0.75] | image}
+    \V{["plt/mpl/anatomy-en", "th", 0.75] | image}
 \end{frame}
 
 \begin{frame}{Anatomy of a figure}
@@ -115,7 +115,7 @@
       \end{description}
     \end{minipage}
     \begin{minipage}{0.49\linewidth}
-        \V{["plt/mpl/anatomy", "tw", 1] | image}
+        \V{["plt/mpl/anatomy-en", "tw", 1] | image}
     \end{minipage}
 \end{frame}
 
@@ -129,7 +129,7 @@
         \end{description}
     \end{minipage}
     \begin{minipage}{0.49\linewidth}
-        \V{["plt/mpl/anatomy", "tw", 1] | image}
+        \V{["plt/mpl/anatomy-en", "tw", 1] | image}
     \end{minipage}
 \end{frame}
 
@@ -142,7 +142,7 @@
         \mintedcustomcode{en/python/data-science/matplotlib/classique-start}{py}
     \end{minipage}
     \begin{minipage}[t]{0.49\linewidth}
-        \V{["plt/mpl/classique-start", "tw", 0.65] | image} 
+        \V{["plt/mpl/classique-start", "tw", 0.65, "en"] | image} 
     \end{minipage}
 \end{frame} 
 
@@ -151,7 +151,7 @@
         \mintedcustomcode{en/python/data-science/matplotlib/legend}{py}
     \end{minipage}
     \begin{minipage}{0.49\linewidth}
-        \V{["plt/mpl/legend", "tw", 1] | image} 
+        \V{["plt/mpl/legend-en", "tw", 1] | image} 
     \end{minipage}
 \end{frame}
 
@@ -160,7 +160,7 @@
         \mintedcustomcode{en/python/data-science/matplotlib/limits}{py}
     \end{minipage}
     \begin{minipage}{0.49\linewidth}
-        \V{["plt/mpl/limits", "tw", 1] | image} 
+        \V{["plt/mpl/limits", "tw", 1, "en"] | image} 
     \end{minipage}
 \end{frame}
 
@@ -169,7 +169,7 @@
         \mintedcustomcode{en/python/data-science/matplotlib/spines}{py}
     \end{minipage}
     \begin{minipage}{0.46\linewidth}
-        \V{["plt/mpl/spines", "tw", 1] | image}
+        \V{["plt/mpl/spines", "tw", 1, "en"] | image}
     \end{minipage}
 \end{frame}
 
@@ -178,7 +178,7 @@
         \mintedcustomcode{en/python/data-science/matplotlib/labels}{py}
     \end{minipage}
     \begin{minipage}[c]{0.49\linewidth}
-        \V{["plt/mpl/labels", "tw", 1] | image} 
+        \V{["plt/mpl/labels", "tw", 1, "en"] | image} 
     \end{minipage}
 \end{frame}
 
@@ -187,12 +187,12 @@
         \mintedcustomcode{en/python/data-science/matplotlib/ticks}{py}
     \end{minipage}
     \begin{minipage}[c]{0.49\linewidth}
-        \V{["plt/mpl/ticks", "tw", 1] | image} 
+        \V{["plt/mpl/ticks", "tw", 1, "en"] | image} 
     \end{minipage}
 \end{frame}
 
 \begin{frame}{Multiple plots and projection}
-    \V{["plt/mpl/scales", "tw", 0.6] | image} 
+    \V{["plt/mpl/scales", "tw", 0.6, "en"] | image} 
 \end{frame}
 
 \begin{frame}{Subplots}
