--- a/shared/latex/en/supervised/regression-logistique.tex
+++ b/shared/latex/en/supervised/regression-logistique.tex
@@ -4,9 +4,9 @@
   Logistic regression adds to this core a mechanism for predicting probabilities.
 \end{frame}
 
-\begin{frame}{The 2-class case}
+\begin{frame}{The binary case}
   \begin{center}
-    \V{["tikz/activations/sigmoid", "tw", 0.9] | image}
+    \V{["tikz/activations/sigmoid", "tw", 0.9, "en"] | image}
   \end{center}
 
   Adding a sigmoid to the linear regression to predict class probabilities:
