--- a/shared/latex/en/supervised/regression-polynomiale.tex
+++ b/shared/latex/en/supervised/regression-polynomiale.tex
@@ -1,12 +1,12 @@
 
 \begin{frame}{Polynomial regression}
   Linear regression limitations
-  \V{["plt/residuals-1", "tw", 1] | image}
+  \V{["plt/residuals-1", "tw", 1, "en"] | image}
 \end{frame}
 
 \begin{frame}{Polynomial regression}
   Linear regression limitations
-  \V{["plt/residuals-2", "tw", 1] | image}
+  \V{["plt/residuals-2", "tw", 1, "en"] | image}
 \end{frame}
 
 \begin{frame}{Example of polynomial regressions}
@@ -17,7 +17,7 @@
       \]
     \end{column}
     \begin{column}{0.75\tw}
-      \V{["plt/polynomial-regression", "tw", 0.8] | image}
+      \V{["plt/polynomial-regression", "tw", 0.8, "en"] | image}
     \end{column}
   \end{columns}
 \end{frame}
