--- a/shared/latex/en/unsupervised/anomaly-detection/isolation-forest.tex
+++ b/shared/latex/en/unsupervised/anomaly-detection/isolation-forest.tex
@@ -9,5 +9,5 @@
 \end{frame}
 
 \begin{frame}{Isolation forest}
-  \V{["img/isolation-forest", "tw", 0.75] | image}
+  \V{["img/isolation-forest", "tw", 0.75, "en"] | image}
 \end{frame}
