--- a/shared/latex/en/unsupervised/anomaly-detection/lof.tex
+++ b/shared/latex/en/unsupervised/anomaly-detection/lof.tex
@@ -10,7 +10,7 @@
       \end{itemize}
     \end{column}
     \begin{column}{.3\tw}
-      \V{["img/lof-density", "tw", 1] | image}
+      \V{["img/lof-density", "tw", 1, "en"] | image}
     \end{column}
   \end{columns}
 
@@ -18,7 +18,7 @@
 \end{frame}
 
 \begin{frame}{Example}
-  \V{["img/lof", "tw", 0.7] | image}
+  \V{["img/lof", "tw", 0.65, "en"] | image}
 \end{frame}
 
 \begin{frame}{Disadvantages}
