--- a/shared/latex/unsupervised/dimensionality-reduction/pca-lda.tex
+++ b/shared/latex/unsupervised/dimensionality-reduction/pca-lda.tex
@@ -19,9 +19,11 @@
   \V{["img/pca-nuage", "th", 0.7] | image}
 \end{frame}
 
-\begin{frame}{ACP --- Exemple 2}
-  \V{["img/pca-fish", "th", 0.7] | image}
-\end{frame}
+\fmg{
+  \begin{frame}{ACP --- Exemple 2}
+    \V{["img/pca-fish", "th", 0.7] | image}
+  \end{frame}
+}
 
 \begin{frame}{ACP --- Point de départ}
   \[
