--- a/figures/tikz/neural-networks/ae/variational-en.tex
+++ b/figures/tikz/neural-networks/ae/variational-en.tex
@@ -65,8 +65,8 @@
     %\draw [ArrowC1] (h -| ibox3)++(-0.5,0) -| (ibox3);
 
     % Text above
-    \node at (1, 3) {\textcolor{DeepSpaceSparkle}{\textbf{Moyennes}}};
+    \node at (1.2, 3) {\textcolor{DeepSpaceSparkle}{\textbf{Means}}};
     \node at (1, -3) {\textcolor{DeepSpaceSparkle}{\textbf{Variances}}};
-    \node at (3, -1.8) {\textcolor{DeepSpaceSparkle}{\textbf{Code généré}}};
+    \node[align=center] at (3, -2) {\textcolor{DeepSpaceSparkle}{\textbf{Generated}}\\\textcolor{DeepSpaceSparkle}{\textbf{vector}}};
   \end{tikzpicture}
 \end{document}
