Traduction yml et img (avec la pj c'est mieux)

--- a/shared/latex/en/nlp/wordembeddings.tex
+++ b/shared/latex/en/nlp/wordembeddings.tex
@@ -51,12 +51,12 @@
   
   \begin{frame}
     \frametitle{Word Embeddings} 
-    \V{["tikz/nlp/cbow", "th", 0.75] | image}
+    \V{["tikz/nlp/cbow-en", "th", 0.75] | image}
   \end{frame}
   
   \begin{frame}
     \frametitle{Word Embeddings} 
-    \V{["tikz/nlp/word2vec-analogy", "tw", 0.5] | image}
+    \V{["tikz/nlp/word2vec-analogy-en", "tw", 0.5] | image}
     \begin{center}
       \bluelink{https://projector.tensorflow.org/}{Word2vec latent space visualization} \\
       \bluelink{http://vectors.nlpl.eu/repository/}{Word Embeddings to download}
