--- a/shared/latex/en/nn/ae/autoencoder.tex
+++ b/shared/latex/en/nn/ae/autoencoder.tex
@@ -11,17 +11,17 @@
 \begin{frame}{Deep auto-encoder}
   Also called stacked auto-encoders (even though they were known for a specific training method that is not used anymore).
 
-  \V{["tikz/neural-networks/ae/autoencoder-stacked", "tw", 0.9] | image}
+  \V{["tikz/neural-networks/ae/autoencoder-stacked", "tw", 0.9, "en"] | image}
 \end{frame}
 
 \begin{frame}{Denoising auto-encoder}
-  \V{["tikz/neural-networks/ae/denoiser", "tw", 1.1] | image}
+  \V{["tikz/neural-networks/ae/denoiser-en", "tw", 1.1] | image}
 \end{frame}
 
 \begin{frame}{CNN Deep auto-encoder}
-  \V{["tikz/neural-networks/ae/deep-auto-encoder", "tw", 1] | image}
+  \V{["tikz/neural-networks/ae/deep-auto-encoder", "tw", 1, "en"] | image}
 \end{frame}
 
 \begin{frame}{Variational auto-encoder}
-  \V{["tikz/neural-networks/ae/variational", "tw", 0.9] | image}
+  \V{["tikz/neural-networks/ae/variational-en", "tw", 0.9] | image}
 \end{frame}
