--- a/shared/latex/en/nn/cnn/interpret.tex
+++ b/shared/latex/en/nn/cnn/interpret.tex
@@ -1,6 +1,6 @@
 \begin{frame}{CNN interpretation}
   How to interpret a CNN prediction?
-  \V{["tikz/neural-networks/cnn/classification", "tw", 1] | image}
+  \V{["tikz/neural-networks/cnn/classification-en", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Occlusion sensitivity}
@@ -11,15 +11,15 @@
 \end{frame}
 
 \begin{frame}{Occlusion sensitivity}
-  \V{["img/cnn-interpret-occlusion-sensitivity", "tw", 1] | image}
+  \V{["img/cnn-interpret-occlusion-sensitivity", "tw", 1, "en"] | image}
 \end{frame}
 
 \begin{frame}{Occlusion sensitivity}
   The gradient of a layer close to the end of the network is used to create the heatmap
-  \V{["tikz/neural-networks/cnn/classification", "tw", 1] | image}
+  \V{["tikz/neural-networks/cnn/classification-en", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Grad-CAM}
-  \V{["img/cnn-interpret-grad-cam", "tw", 1] | image}
+  \V{["img/cnn-interpret-grad-cam", "tw", 1, "en"] | image}
 \end{frame}
   
