--- a/shared/latex/en/nn/cnn/modern-anomaly-detection.tex
+++ b/shared/latex/en/nn/cnn/modern-anomaly-detection.tex
@@ -3,19 +3,19 @@
 \end{frame}
 
 \begin{frame}{Step 1 --- Masking}
-    \V{["tikz/neural-networks/cnn/inpainting-anomaly-detect-step1-mask", "th", 0.7] | image}
+    \V{["tikz/neural-networks/cnn/inpainting-anomaly-detect-step1-mask", "th", 0.7, "en"] | image}
 \end{frame}
 
 \begin{frame}{Step 2 --- Masked areas prediction}
-    \V{["tikz/neural-networks/cnn/inpainting-anomaly-detect-step2-autoencoder-predict", "tw", 1.0] | image}
+    \V{["tikz/neural-networks/cnn/inpainting-anomaly-detect-step2-autoencoder-predict", "tw", 1.0, "en"] | image}
 \end{frame}
 
 \begin{frame}{Step 3 --- Assembling of predicted parts}
-    \V{["tikz/neural-networks/cnn/inpainting-anomaly-detect-step3-assemble", "th", 0.7] | image}
+    \V{["tikz/neural-networks/cnn/inpainting-anomaly-detect-step3-assemble", "th", 0.7, "en"] | image}
 \end{frame}
   
 \begin{frame}{Step 4 --- Comparing to the original}
-    \V{["tikz/neural-networks/cnn/inpainting-anomaly-detect-step4-compare-input-output", "th", 0.8] | image}
+    \V{["tikz/neural-networks/cnn/inpainting-anomaly-detect-step4-compare-input-output-en", "th", 0.8] | image}
 \end{frame}
   
 \begin{frame}{Anomaly detection --- A modern method}
