--- a/shared/latex/en/nn/rnn/model.tex
+++ b/shared/latex/en/nn/rnn/model.tex
@@ -9,7 +9,7 @@
 \end{frame}
 
 \begin{frame}{Model}
-  \V{["tikz/neural-networks/rnn/simple-unfold", "th", 0.3] | image}
+  \V{["tikz/neural-networks/rnn/simple-unfold", "th", 0.3, "en"] | image}
   \vspace{-2ex}
   \begin{align*}
     \vect{h_t} &= \sigma_h(\vect{U} \vect{x_t} + \vect{V} \vect{h_{t-1}} + \vect{b_h}) \\
@@ -52,5 +52,5 @@
 \end{frame}
 
 \begin{frame}{Vanishing gradient problem: recurrence edition}
-  \V{["tikz/optimization/vanishing-gradients-rnn-en", "tw", 0.7] | image}
+  \V{["tikz/optimization/vanishing-gradients-rnn-en", "tw", 0.65, "en"] | image}
 \end{frame}
