--- a/shared/latex/en/nn/rnn/variants.tex
+++ b/shared/latex/en/nn/rnn/variants.tex
@@ -8,7 +8,7 @@
 \end{frame}
 
 \begin{frame}{Gated Recurrent Unit --- Theoretical details}
-  \V{["tikz/neural-networks/rnn/gru", "tw", 0.55] | image}
+  \V{["tikz/neural-networks/rnn/gru", "tw", 0.55, "en"] | image}
   \begin{description}[<+->]
     \item[Update gate] $z_t = \sigma (W_z \times x_t + U_z \times h_{t - 1} + b_z)$
     \item[Reset gate] $r_t = \sigma (W_r \times x_t + U_r \times h_{t - 1} + b_r)$
@@ -35,6 +35,6 @@
 
 \fmg{
   \begin{frame}{Other variants}
-    \V{["img/spaghetti", "tw", 1] | image}
+    \V{["img/spaghetti", "tw", 1, "en"] | image}
   \end{frame}
 }
