--- a/shared/latex/en/nlp/preprocessing.tex
+++ b/shared/latex/en/nlp/preprocessing.tex
@@ -29,15 +29,15 @@
 \end{frame}
 
 \begin{frame}{Part-of-speech tagging}
-  \V{["img/pos-tagging", "tw", 0.8] | image}
+  \V{["img/pos-tagging", "tw", 0.8, "en"] | image}
 \end{frame}
 
 \begin{frame}{Named-entity recognition}
-  \V{["img/named-entity-recognition", "tw", 0.8] | image}
+  \V{["img/named-entity-recognition", "tw", 0.8, "en"] | image}
 \end{frame}
 
 \begin{frame}{Syntax analysis}
-  \V{["img/parse-tree", "tw", 0.8] | image}
+  \V{["img/parse-tree", "tw", 0.8, "en"] | image}
 \end{frame}
 
 \begin{frame}{Syntax analysis}
@@ -66,21 +66,21 @@
 \end{frame}
 
 \begin{frame}{Tools --- WordNet}
-  \V{["img/wordnet-1", "th", 0.7] | image}  
+  \V{["img/wordnet-1", "th", 0.7, "en"] | image}  
 \end{frame}
 
 \begin{frame}{Tools --- DBpedia}
-  \V{["img/dbpedia", "tw", 0.9] | image}
+  \V{["img/dbpedia", "tw", 0.9, "en"] | image}
 \end{frame}
 
 \fmg{
   \begin{frame}{Utilisation actuelle}
-    \V{["img/chatbot", "tw", 0.9] | image}
+    \V{["img/chatbot", "tw", 0.9, "en"] | image}
   \end{frame}
 }
 
 \fmg{
   \begin{frame}{Maintenabilité}
-    \V{["img/usine-a-gaz", "tw", 0.9] | image}
+    \V{["img/usine-a-gaz", "tw", 0.9, "en"] | image}
   \end{frame}
 }
