--- a/shared/latex/en/nn/cnn/task.tex
+++ b/shared/latex/en/nn/cnn/task.tex
@@ -1,19 +1,19 @@
 \begin{frame}{Classification}
-    \V{["tikz/neural-networks/cnn/classification", "tw", 1] | image}
+    \V{["tikz/neural-networks/cnn/classification-en", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Segmentation}
-    \V{["tikz/neural-networks/cnn/segmentation", "tw", 1.0] | image}
+    \V{["tikz/neural-networks/cnn/segmentation", "tw", 1.0, "en"] | image}
 \end{frame}
 
 \begin{frame}{Inpainting}
-    \V{["tikz/neural-networks/cnn/inpainting", "tw", 1.0] | image}
+    \V{["tikz/neural-networks/cnn/inpainting", "tw", 1.0, "en"] | image}
 \end{frame}
 
 \begin{frame}{Super sampling}
-    \V{["tikz/neural-networks/cnn/super-resolution", "tw", 1.0] | image}
+    \V{["tikz/neural-networks/cnn/super-resolution", "tw", 1.0, "en"] | image}
 \end{frame}
 
 \begin{frame}{Anomaly detection}
-    \V{["tikz/neural-networks/cnn/anomaly-detection", "tw", 1.0] | image}
+    \V{["tikz/neural-networks/cnn/anomaly-detection", "tw", 1.0, "en"] | image}
 \end{frame}
