Traduction TPs datascience

--- a/shared/latex/en/python/data-science/tp-numpy.tex
+++ b/shared/latex/en/python/data-science/tp-numpy.tex
@@ -1,3 +1,3 @@
-\begin{frame}{Practical exercises}
-  \bluelink{https://colab.research.google.com/drive/1SzkmTDbPkMgYxGgN518j0IjjQHbsF78K\#forceEdit=true&sandboxMode=true}{Instructions}
+\begin{frame}{Exercises}
+  \bluelink{https://colab.research.google.com/drive/1-KTlIm1nA4vQLyWOXie3x4YpCZdxQ37a\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
