--- a/shared/latex/en/python/data-science/tp-matplotlib.tex
+++ b/shared/latex/en/python/data-science/tp-matplotlib.tex
@@ -1,3 +1,3 @@
-\begin{frame}{Practical exercises}
-  \bluelink{https://colab.research.google.com/drive/1i5M9S1-6BDWF-T21PUwylUojUjUq-5od\#forceEdit=true&sandboxMode=true}{Instructions}
+\begin{frame}{Exercises}
+  \bluelink{https://colab.research.google.com/drive/1-UiQ8bZi3RS52wejVouHuZ65zlfh60QA\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
