update links to TP with new copy for EN version

--- a/shared/latex/en/nn/cnn/tp.tex
+++ b/shared/latex/en/nn/cnn/tp.tex
@@ -1,6 +1,8 @@
-\begin{frame}{Travaux pratiques}
-  \begin{enumerate}
-    \item \bluelink{https://colab.research.google.com/drive/1xLFNAWBJxmp0GBcRhmwKfZUbewBDq4hz\#forceEdit=true&sandboxMode=true}{Instructions, données paysages}
-    \item \bluelink{https://colab.research.google.com/drive/1AarpBtVUUi2DpOd20kF3LHg-bKLM7h_4\#forceEdit=true&sandboxMode=true}{Instructions, données émotions}
-  \end{enumerate}
+\begin{frame}{Practical exercises}
+  \begin{itemize}
+    \item
+      \bluelink{https://colab.research.google.com/drive/1C6M03UMvaAqx-saU4eOQztb9vzOuRp5F\#forceEdit=true&sandboxMode=true}{CNNs with Keras on \texttt{landscape} data}
+    \item
+      \bluelink{https://colab.research.google.com/drive/1CPB5dI4Wl5JjuW-CgD65dObKXuCmNYGv\#forceEdit=true&sandboxMode=true}{Image segmentation with Keras}
+  \end{itemize}
 \end{frame}
