restructuration formation loreal

--- a/shared/latex/en/about/formateur.tex
+++ b/shared/latex/en/about/formateur.tex
@@ -2,8 +2,8 @@
   \begin{description}
     \item[Name] \TrainerName
     \item[Email] \TrainerEmail
-    \item[Activity] \TrainerActivityEn
-    \item[Specialization] \TrainerSpecializationEn
-    \item[Training] \TrainerTrainingEn
+    \item[Activity] \TrainerActivity
+    \item[Specialization] \TrainerSpecialization
+    \item[Training] \TrainerTraining
   \end{description}
 \end{frame}
