--- a/shared/latex/nn/chatgpt.tex
+++ b/shared/latex/nn/chatgpt.tex
@@ -1,3 +1,108 @@
+\begin{frame}{Les acteurs}
+  \begin{itemize}
+    \item chatGPT
+    \item Bard 
+    \item OPT
+    \item ...
+  \end{itemize}
+  Tous fonctionnent plus ou moins de la même manière...
+\end{frame}
+
 \begin{frame}{ChatGPT}
-  \V{["img/chattejaipete-ducul", "tw", 0.9] | image}
+  Fonctionnement : 
+  \begin{itemize}
+    \item GPT 3.5
+    \item Reinforcement Learning from Human Feedback
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{GPT 3.5}
+  \begin{itemize}
+    \item Modèle de langage multi-tâches
+    \item $\approx$500 Milliards de mots
+    \item 175 Milliards de paramètres ($\approx$ 1To de mémoire RAM)
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{RLHF}
+  Apprentissage d'un modèle discussionnel au-dessus de GPT 3.5
+  \begin{itemize}
+    \item Interactions avec des humains
+    \item Les humains doivent juger la qualité de la réponse
+    \item En suivant un cahier des charges strict
+    \item Les humains doivent aussi produire des contenus qui doivent être modérés
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{chatGPT}
+  Faire fonctionner localement chatGPT
+  \begin{itemize}
+    \item Apprentissage : $\approx$10 000 GPUs et $\approx$285 000 CPU cores
+    \item Ilya Sutskever pour $\approx$2 Million de dollars par an + $\approx$120 personnes
+    \item Collecter des données de données et l'infrastructure pour nourrir l'apprentissage.
+    \item Temps d'apprentissage : 9-12 mois, si tout se passe bien...
+    \item Inférence : $\approx$2 000 GPUs et $\approx$60 000 CPU cores (quelques kW)
+    \item Estimation à 3 millions de dollars par mois actuellement
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{résultats depuis Novembre 2022}
+  Des embauches :
+  \begin{itemize}
+    \item L3 Software Developer chez Google: \$183,000/an.
+    \item Aide un juge pour un verdict (Colombia).
+    \item Aide à écrire des loi (USA).
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{résultats depuis Novembre 2022}
+  ChatGPT passe des examens :
+  \begin{figure}
+    \centering
+    \begin{tabular}{lcl}
+      \toprule
+              & Examen                               & Note  \\
+      \midrule
+      MBA     & Wharton (UPenn)                       & B-  \\
+      Compta. & US Certified Public Accountant (CPA)  & 57.6\% \\
+      Legal   & US Multistate Bar (MBE)               & 50.3\% \\
+      Medical & US Medical Licensing (USMLE)          & >60\% \\
+      AWS     & Cloud Practitioner certificate        & 80\% \\
+      \bottomrule
+    \end{tabular}
+  \end{figure}
+
+\end{frame}
+
+\begin{frame}{résultats depuis Novembre 2022}
+  ChatGPT passe des examens :
+  \begin{figure}
+    \centering
+    \begin{tabular}{lcl}
+      \toprule
+              & Examen                               & Note  \\
+      \midrule
+      Q.I. & Matrices de Raven &	>98\% \\
+      Q.I. & verbal only & 99.9ième percentile \\
+      Q.I. & Binet-Simon (verbal) & 99.9ième percentile \\
+      Raisonnement &  SAT & 52ième percentile \\
+      Raisonnement & SAT Analogies &	65.2\% \\
+      Culture générale & bat IBM Watson à Jeopardy\! &	100\% \\
+      \bottomrule
+    \end{tabular}
+  \end{figure}
+\end{frame}
+
+\begin{frame}{Quelles limites ?}
+  \begin{itemize}
+    \item chatGPT n'apprend rien 
+    \item Ne raisonne pas vraiment
+    \item Le texte généré est limité en taille
+    \item Le droit d'auteur en questions
+  \end{itemize} 
+\end{frame}
+
+\begin{frame}{ChatGPT}
+  Les mots ne sont pas attachés à des sons.
+  \V{["img/chattejaipete-ducul", "tw", 0.85] | image}
 \end{frame}
