--- a/shared/latex/unsupervised/clustering/spectral-clustering.tex
+++ b/shared/latex/unsupervised/clustering/spectral-clustering.tex
@@ -149,7 +149,73 @@
     \end{minipage}
 \end{frame}
 
+\begin{frame}{Spécification du problème}
+    \begin{minipage}{0.49\linewidth}
+        \begin{itemize}
+            \item Le but est de trouver un sous-graphe $G'\subset G$ defini par un vecteur $x$ qui représente l'ensemble des noeuds de $G'$
+            \item $G'$ conserve l'ensemble des arêtes possibles entre les noeuds de $G'$
+            \visible<2>{\item Exemple : $x =(1,1,0,1,0,1)$}
+        \end{itemize}
+    \end{minipage}
+    \begin{minipage}{0.49\linewidth}
+        \only<1>{
+            \V{["tikz/graph/spectral-clustering-1", "tw", 1] | image}
+        }
+        \only<2>{
+            \V{["tikz/graph/spectral-clustering-4", "tw", 1] | image}
+        }
+
+    \end{minipage}
+\end{frame}
+
+\begin{frame}{Spécification du problème}
+    Étant donné deux sous graphes $G_1,G_2 \subset G$ tels que l'ensemble des nœuds $x_1$ et $x_2$, respectivement, de $G_1$ et $G_2$ soient mutuellement exclusifs, on cherche $x_1, x_2$ tels que~:
+    $$
+        \min_{x_1, x_2} L.x_1 + L.x_2
+    $$
+\end{frame}
+
+\begin{frame}{Spécification du problème}
+    Exemple pour la séparation suivante:
+
+    \V{["tikz/graph/spectral-clustering-2", "tw", 0.3] | image}
+
+    $$
+        L.x_1 + L.x_2 = 2
+    $$
+
+    avec $x_1 = (1,1,1,0,0,0)$ et $x_2 = (0,0,0,1,1,1)$
+\end{frame}
+
+\begin{frame}{Spécification du problème (Avancé)}
+    Étant donné un graphe $G$ de laplacienne $L$, on cherche le vecteur $x$ de partitionnage tels que~:
+    $$
+        \min_{x} \frac{x^T L x}{x^T x}
+    $$
+
+    Ce qui est équivalent à une erreur quadratique :
+    $$
+        \min_x \frac{\sum_{(i,j)}(x_i-x_j)^2}{||x||^2}
+    $$
+    
+    On pourra simplifier l'expression en garantissant que $||x||^2 = 1$ :
+    $$
+        \min_x \sum_{(i,j)}(x_i-x_j)^2
+    $$
+\end{frame}
+
+
+
 \begin{frame}{Vecteurs propres de la laplacienne}
+    Les vecteurs propres de la matrice laplacienne vont nous permettre de trouver une solution à notre problème.
+
+    \textbf{\alert{Rappel}}
+
+    Si $x$ est un vecteur propre de $L$ de valeur propre $\lambda$ alors~:
+    $$
+        Lx = \lambda x
+    $$
+    A TERMINER
 \end{frame}
  
 \begin{frame}{Fiedler vector}
