--- a/stys/formation.sty
+++ b/stys/formation.sty
@@ -41,6 +41,8 @@
 \setbeamercolor{normal text}{bg=white}
 \setbeamertemplate{bibliography item}{\insertbiblabel}
 \setbeamertemplate{blocks}[rounded]
+\setbeamercolor{block title alerted}{use=structrure, fg=white, bg=DeepSpaceSparkle!75}
+\setbeamercolor{block body alerted}{parent=normal text, fg=DeepSpaceSparkle, bg=DeepSpaceSparkle!10!bg}
 \setbeamercovered{transparent}
 
 \captionsetup[figure]{labelformat=empty}
