Start translating python/basics
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/bda/en/latex/en/about/description.tex
+++ b/orsys/bda/en/latex/en/about/description.tex
@@ -1,32 +1,22 @@
 \begin{frame}{Description}
-  Cette formation présente les \textbf{fondamentaux} de la \textbf{Modélisation Statistique} à travers des travaux pratiques.
+  This training introduces the \textbf{fondamentals} of \textbf{statistical modeling} with a focus on hands-on practice.
 \end{frame}
 
-\begin{frame}{Prérequis}
+\begin{frame}{Prerequisites}
   \begin{itemize}
-  \item Connaissances de base en statistiques et algèbre
-  \item Connaissances de base en python
-  \item Avoir un \textbf{compte Google} afin de pouvoir faire les TPs dans \bluelink{https://colab.research.google.com/notebooks/welcome.ipynb}{Google Colaboratory}
+  \item Basic knowledge of statistics and algebra
+  \item Basic knowledge of Python
+  \item A valid \textbf{Google account} to be able to do the labs on \bluelink{https://colab.research.google.com/notebooks/welcome.ipynb}{Google Colaboratory}
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Objectifs pédagogiques}
+\begin{frame}{Objectives}
   \begin{itemize}
-  \item Comprendre les principes de la modélisation statistique
-  \item Comprendre les différents types de régressions
-  \item Évaluer les performances d'un algorithme prédictif
-  \item Sélectionner et classer des données dans de grands volumes de données
-  \item Se familiariser avec les librairies scientifiques python (NumPy, seaborn, scikit-learn, ... )
+  \item Understand the principles of statistical modeling
+  \item Understand the different types of regressions
+  \item Evaluate the performances of a predictive algorithm
+  \item Select and classify data in a big data environment
+  \item Get familiar with the various scientific libraries in Python (NumPy, seaborn, scikit-learn, ... )
   \end{itemize}
-  En bref, se familiariser avec les concepts et techniques de bases du \og{}Machine Learning\fg
-\end{frame}
-
-\begin{frame}{Programme}
-  \begin{itemize}
-  \item Introduction à la modélisation
-  \item Évaluation de modèles prédictifs
-  \item Les algorithmes supervisés/non-supervisés
-  \item Projection de données par composantes
-  \item Analyse de données textuelles
-  \end{itemize}
+  In short, learn the fundamentals of machine learning.
 \end{frame}
