Vecteur de fiedler

--- a/figures/tikz/graph/spectral-clustering-2.tex
+++ b/figures/tikz/graph/spectral-clustering-2.tex
@@ -5,7 +5,7 @@
 \begin{document}
   \begin{tikzpicture}
     \tikzset{cluster1/.style={very thick, IndianYellow}}
-    \tikzset{cluster2/.style={very thick, applegreen}}
+    \tikzset{cluster2/.style={very thick, DeepSpaceSparkle}}
 
     \node [output,circle] (N1) at (1, 0) {1};
     \node [output,circle] (N2) at (0, 2) {2};
